# Forest-data-collection

./: .gitignore.txt  CMakeLists.txt  readme.md
Tests/: CMakeLists.txt  clientFunTesting.cpp
client2/: CMakeLists.txt  client2.cpp  client2.h
server2/: CMakeLists.txt  server2.cpp
